--- a/neovis.html
+++ b/neovis.html
@@ -70,7 +70,7 @@
                 arrows: true,
                 hierarchical_layout: true,
                 hierarchical_sort_method: "hubsize",
-                initial_cypher: "MATCH (n) WHERE n:EC2 OR n:VPC OR n:IP OR n:Region OR n:RDS OR n:Subnet OR n:IGW OR n:SecurityGroup MATCH (n)-[r]-() RETURN n,r"
+                initial_cypher: "MATCH (n) WHERE n:EC2 OR n:VPC OR n:IP OR n:Region OR n:RDS OR n:Subnet OR n:IGW OR n:SecurityGroup OR n:AZ MATCH (n)-[r]-() RETURN n,r"
             };
 
             viz = new NeoVis.default(config);
